# DataScience_CemfiMaster

./: .gitignore  README.md  main.py  pyproject.toml
00_personal/: tutorial note.ipynb
Session1/: 1_1.ipynb  1_2.ipynb
Session2/: 1_1_Introduction.ipynb  1_2_Scraping.ipynb  2_1_BIS_Scraper_I.ipynb  2_1_BIS_Scraper_II.ipynb  Extra_BCU_Scraper.ipynb
data/: death-rate-who.csv
