[project]
name = "datascience-cemfimaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "ipykernel (>=6.30.1,<7.0.0)",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "requests>=2.32.5",
]
